<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/smart_facility_mt" android:layout_below="@+id/tv_smart_facility" android:layout_toEndOf="@+id/sp_smart">
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_fragrance" android:background="@drawable/img_fragrance" android:visibility="gone" android:layout_width="@dimen/smart_facility_width" android:layout_height="@dimen/smart_facility_height" android:layout_marginStart="11dp" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_smart_fragrance">
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_fragrance_title" app:vuiMode="DISABLED" style="@style/smart_facility_item_text_style"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_fragrance_bg" android:paddingLeft="@dimen/smart_facility_state_text_dp" android:paddingRight="@dimen/smart_facility_state_text_dp" android:layout_width="wrap_content" android:layout_height="@dimen/smart_facility_state_text_height" android:layout_marginTop="@dimen/smart_facility_state_text_mt" android:minWidth="@dimen/smart_facility_state_text_min_width" android:layout_marginStart="@dimen/smart_facility_state_text_ms" app:vuiMode="DISABLED">
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_smart_facility_fragrance_state" app:vuiMode="DISABLED" style="@style/smart_facility_item_state_style"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_aroma_name" app:vuiMode="DISABLED" style="@style/smart_facility_item_name_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_power" android:visibility="gone" android:layout_width="@dimen/smart_facility_width" android:layout_height="@dimen/smart_facility_height" android:layout_marginLeft="11dp" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_power">
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_power_title" app:vuiMode="DISABLED" style="@style/smart_facility_item_text_style"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_power_bg" android:paddingLeft="@dimen/smart_facility_state_text_dp" android:paddingRight="@dimen/smart_facility_state_text_dp" android:layout_width="wrap_content" android:layout_height="@dimen/smart_facility_state_text_height" android:layout_marginTop="@dimen/smart_facility_state_text_mt" android:minWidth="@dimen/smart_facility_state_text_min_width" android:layout_marginStart="@dimen/smart_facility_state_text_ms" app:vuiMode="DISABLED">
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_smart_facility_power_state" app:vuiMode="DISABLED" style="@style/smart_facility_item_state_style"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_power_name" app:vuiMode="DISABLED" style="@style/smart_facility_item_name_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_freezer" android:background="@drawable/img_freezer" android:visibility="gone" android:layout_width="@dimen/smart_facility_width" android:layout_height="@dimen/smart_facility_height" android:layout_marginLeft="11dp" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_smart_freezer">
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_freezer_title" app:vuiMode="DISABLED" style="@style/smart_facility_item_text_style"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_freezer_bg" android:paddingLeft="@dimen/smart_facility_state_text_dp" android:paddingRight="@dimen/smart_facility_state_text_dp" android:layout_width="wrap_content" android:layout_height="@dimen/smart_facility_state_text_height" android:layout_marginTop="@dimen/smart_facility_state_text_mt" android:minWidth="@dimen/smart_facility_state_text_min_width" android:layout_marginStart="@dimen/smart_facility_state_text_ms" app:vuiMode="DISABLED">
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_smart_facility_freezer_state" app:vuiMode="DISABLED" style="@style/smart_facility_item_state_style"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_freezer_name" app:vuiMode="DISABLED" style="@style/smart_facility_item_name_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_sunroof" android:background="@drawable/img_sunroof" android:visibility="gone" android:layout_width="@dimen/smart_facility_width" android:layout_height="@dimen/smart_facility_height" android:layout_marginLeft="11dp" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_sun_roof">
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_sunroof_title" app:vuiMode="DISABLED" style="@style/smart_facility_item_text_style"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_sunroof_bg" android:paddingLeft="@dimen/smart_facility_state_text_dp" android:paddingRight="@dimen/smart_facility_state_text_dp" android:layout_width="wrap_content" android:layout_height="@dimen/smart_facility_state_text_height" android:layout_marginTop="@dimen/smart_facility_state_text_mt" android:minWidth="@dimen/smart_facility_state_text_min_width" android:layout_marginStart="@dimen/smart_facility_state_text_ms" app:vuiMode="DISABLED">
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_smart_facility_sunroof_state" app:vuiMode="DISABLED" style="@style/smart_facility_item_state_style"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/smart_facility_sunroof_name" app:vuiMode="DISABLED" style="@style/smart_facility_item_name_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XLinearLayout>
