<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/ll_cockpit_particulars" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/cockpit_mode_height" android:layout_below="@+id/sp_cockpit" android:showDividers="middle" android:layout_marginHorizontal="@dimen/cockpit_mode_ml">
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:id="@+id/ll_sleep_mode" android:background="@drawable/shape_sleep_mode_bg" android:layout_width="match_parent" android:layout_height="@dimen/cockpit_particulars_height" android:layout_weight="1" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_x_sleep_mode">
        <com.xiaopeng.xui.widget.XImageView android:src="@drawable/vector_sleep" android:scaleType="centerInside" style="@style/cockpit_particulars_image_style"/>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/car_life_sleep_mode_text" app:vuiMode="DISABLED" style="@style/cockpit_particulars_text2_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:id="@+id/ll_play_mode" android:background="@drawable/shape_play_mode_bg" android:layout_width="match_parent" android:layout_height="@dimen/cockpit_particulars_height" android:layout_weight="1" app:vuiAction="@string/vui_action_click" app:vuiElementType="BUTTON" app:vuiLabel="@string/vui_label_x_play_mode">
        <com.xiaopeng.xui.widget.XImageView android:src="@drawable/vector_play" android:scaleType="centerInside" style="@style/cockpit_particulars_image_style"/>
        <com.xiaopeng.xui.widget.XTextView android:text="@string/car_life_play_mode" app:vuiMode="DISABLED" style="@style/cockpit_particulars_text2_style"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XLinearLayout>
