<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="40dp">
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/layout_play_controller_buttons_margin_bottom">
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/exo_rew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fast_back" app:vuiAction="Click" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_rewind"/>
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/exo_play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:layout_marginRight="60dp" android:src="@drawable/ic_play" app:vuiAction="Click" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_video_play"/>
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/exo_pause" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:layout_marginRight="60dp" android:src="@drawable/ic_suspend" app:vuiAction="Click" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_video_pause"/>
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/exo_ffwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fast_forward" app:vuiAction="Click" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_fast_forward"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="100dp">
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/color_duration" android:id="@+id/exo_position" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="111dp"/>
        <com.google.android.exoplayer2.ui.DefaultTimeBar android:id="@+id/exo_progress" android:background="@drawable/bg_progress" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="26dp" android:layout_marginRight="26dp" android:layout_weight="1" app:played_color="@color/color_3B99FF" app:scrubber_disabled_size="@dimen/layout_play_controller_scrubber_size" app:scrubber_dragged_size="@dimen/layout_play_controller_scrubber_size" app:scrubber_enabled_size="@dimen/layout_play_controller_scrubber_size" app:touch_target_height="@dimen/layout_play_controller_timer_bar_height" app:unplayed_color="@color/white"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/color_duration" android:id="@+id/exo_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="111dp"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XLinearLayout>
